--- a/index.html
+++ b/index.html
@@ -2,36 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Esta es mi pagina web">
+    <meta name="author" content="icaito-ricode">
+    <meta name="keywords" content="Mi pagina, mi sitio, mi web">
     <title>Feliz Día del Padre</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: blue;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/favicon.png">
 </head>
 <body>
     <h1>¡Feliz Día del Padre!</h1>
@@ -39,10 +17,6 @@
     <p>Gracias por ser un padre maravilloso. ¡Te queremos mucho!</p>
     <button onclick="felicitar()">Haz clic aquí para felicitar</button>
 
-    <script>
-        function felicitar() {
-            alert("¡Feliz Día del Padre! Eres el mejor del mundo mundial x 1000...");
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
