--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Mi pagina, mi sitio, mi web">
     <title>Feliz Día del Padre</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body>
     <h1>¡Feliz Día del Padre!</h1>
