--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body>
+    <div class="contenedor-logo">
+    <img src="img/Logo-ricodi.jpeg" alt="Logo-ricodi" class="logo-rebote">
+    </div>
     <h1>¡Feliz Día del Padre!</h1>
     <img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-TThNw8mlN0yEXqVcoU9_OXyT3MlPIP9vnQ&s" alt="Imagen del Día del padre">
     <p>Gracias por ser un padre maravilloso. ¡Te queremos mucho!</p>
