--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
     <div class="contenedor-logo">
-    <img src="img/Logo-ricodi.jpeg" alt="Logo-ricodi" class="logo-rebote">
+    <a href="https://www.youtube.com/@icaito-ricodi-resica" target="_blank" title="Canal de Youtube">
+      <img src="img/Logo-ricodi.jpeg" alt="Logo-icaito" class="logo-rebote">
+    </a>
     </div>
     <h1>¡Feliz Día del Padre!</h1>
     <img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-TThNw8mlN0yEXqVcoU9_OXyT3MlPIP9vnQ&s" alt="Imagen del Día del padre">
